# hangman

./: LICENSE  README.md  hangman.cabal
lib/: helpers.hs
src/: Main.hs
test/: Main.hs
