name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
license:             BSD3
license-file:        LICENSE
author:              Even Brenden
maintainer:          evenbrenden@gmail.com
copyright:           2018 Even Brenden
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  data/dict.txt

library
  exposed-modules:     Helpers
  hs-source-dirs:      lib
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
                     , hangman

test-suite hangman-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , hspec
    , hangman
  default-language: Haskell2010
